[tool.poetry]
name = "metagpt"
version = "0.1.0"
description = "The Multi-Role Meta Programming Framework"
authors = ["Alexander Wu <alexanderwu@fuzhi.ai>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://gitlab.deepwisdomai.com/pub/metagpt"
keywords = ["metagpt", "multi-role", "multi-agent", "programming", "gpt", "llm"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiohttp = "^3.8.4"
channels = "^4.0.0"
faiss-cpu = "^1.7.4"
fire = "^0.4.0"
lancedb = "^0.1.16"
loguru = "^0.6.0"
numpy = "^1.24.3"
openai = "^0.27.8"
openpyxl = "^3.1.2"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
pydantic = "^1.10.8"
python-docx = "^0.8.11"
pyyaml = "^6.0"
setuptools = "^65.6.3"
tenacity = "^8.2.2"
tiktoken = "^0.4.0"
tqdm = "^4.64.0"
typing-inspect = "^0.8.0"
typing-extensions = "^4.5.0"
libcst = "^1.0.1"
pytest-mock = "^3.11.1"
ta = "^0.10.2"
langchain = "^0.0.231"
meilisearch = "^0.21.0"
anthropic = "^0.3.6"
semantic-kernel = "^0.3.10.dev0"
qdrant-client = "^1.4.0"
open-interpreter = "^0.1.4"

playwright= {version = ">=1.26", optional = true}
selenium = {version = ">4", optional = true}
google-api-python-client= {version = "2.94.0", optional = true}
duckduckgo-search={version = "3.8.5", optional = true}
pyppeteer = {version = ">=1.0.2", optional = true}
webdriver-manager = {version = "^4.0.0", optional = true}
pillow = "^10.0.1"
chromadb = "^0.4.12"
pymilvus = "^2.3.1"
azure-cognitiveservices-speech = "^1.32.1"
wrapt = "^1.15.0"


[tool.poetry.dev-dependencies]
pytest = "7.2.2"
pytest-asyncio = "^0.21.1"


[tool.poetry.scripts]
metagpt-startup = "metagpt.startup:main"

[tool.poetry.extras]
playwright= ["playwright"]
selenium = ["selenium", "webdriver-manager"]
search-google = ["google-api-python-client"]
search-ddg = ["duckduckgo-search"]
pyppeteer = ["pyppeteer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
